@@ -19,6 +19,8 @@ version '1.0-SNAPSHOT'
 
 
 dependencies {
+    implementation "com.google.protobuf:protobuf-java-util:3.21.7"
+    runtimeOnly 'com.google.protobuf:protobuf-java-util:3.22.2'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
@@ -33,12 +35,16 @@ dependencies {
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'ru.odnoklassniki:one-nio:1.5.0'
     implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.11'
+    implementation "com.google.protobuf:protobuf-java:3.21.7"
+    implementation "io.grpc:grpc-netty:1.52.1"
+    implementation "io.grpc:grpc-protobuf:1.52.1"
+    implementation "io.grpc:grpc-stub:1.52.1"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
-def incubatorArgs = ["--add-modules", "jdk.incubator.foreign"]
 
 application {
-    mainClass = 'server.Server'
+    mainClass = 'server.EnergyDrinksGrpcApiServer'
 }
 
 test {
@@ -56,7 +62,7 @@ run {
 
 jar {
     manifest {
-        attributes "Main-Class": "server.Server"
+        attributes "Main-Class": "server.EnergyDrinksGrpcApiServer"
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from {
@@ -65,7 +71,7 @@ jar {
 }
 
 shadowJar {
-    archiveBaseName.set("server")
+    archiveBaseName.set("server-grpc")
     archiveClassifier.set('shadow')
     archiveVersion.set('0.0.1')
 }
